--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
 				</div>
 				<div class="col-md-9">
 					<span class="header-social-wrapper">
-						<a href="https://www.facebook.com/JoshuaYoungDesign/" class="site-btn header-btn" target="_blank"><i class="fab fa-facebook-f"></i></a>
+						<a href="https://www.facebook.com/joshuayoungdesigns/" class="site-btn header-btn" target="_blank"><i class="fab fa-facebook-f"></i></a>
 						<a href="http://instagram.com/joshuayoungdesign" class="site-btn header-btn" target="_blank"><i class="fab fa-instagram"></i></a>
 						<a href="https://www.linkedin.com/in/joshua-young-835108112/" class="site-btn header-btn" target="_blank"><i class="fab fa-linkedin-in"></i></a>
 						<a href="https://www.youtube.com/channel/UCT1Sfg5fNGrW7_aLWPU9rqw" class="site-btn header-btn last-margin" target="_blank"><i class="fab fa-youtube"></i></a>
@@ -91,8 +91,8 @@
 			<div class="h-rule"></div>
 			<div class="row about-body">
 				<div class="col-lg-6 hideMe">
-					<p>I’m digital / graphic designer, working from Australia.</p>
-					<p>I have extensive knowledge and experience with design platforms, such as <strong>Illustrator, InDesign, Photoshop, After Effects, Premiere Pro, Sketch,</strong> and <strong>Coding platforms.</strong></p>
+					<p>I’m a graphic designer, working from Australia.</p>
+					<p>I have extensive knowledge and experience with design platforms, such as <strong>Illustrator, InDesign, Photoshop, After Effects, Premiere Pro, Sketch,</strong> and <strong>I can code.</strong></p>
 				</div>
 				<div class="col-lg-5 offset-lg-1 hideMe">
 					<p>I’ve delved into various fun, but challenging projects; such as complex layout and designs for <strong>books, magazines, posters, websites, apps, packaging</strong> and more.</p>
@@ -107,7 +107,7 @@
 	<footer class="footer-section text-center">
 		<div class="container hideMe">
 			<div class="footer">
-				<a href="https://www.facebook.com/JoshuaYoungDesign/" class="site-btn footer-btn" target="_blank"><i class="fab fa-facebook-f"></i></a>
+				<a href="https://www.facebook.com/joshuayoungdesigns/" class="site-btn footer-btn" target="_blank"><i class="fab fa-facebook-f"></i></a>
 				<a href="http://instagram.com/joshuayoungdesign" class="site-btn footer-btn" target="_blank"><i class="fab fa-instagram"></i></a>
 				<a href="https://www.linkedin.com/in/joshua-young-835108112/" class="site-btn footer-btn" target="_blank"><i class="fab fa-linkedin-in"></i></a>
 				<a href="https://www.youtube.com/channel/UCT1Sfg5fNGrW7_aLWPU9rqw" class="site-btn footer-btn" target="_blank"><i class="fab fa-youtube"></i></a>
